// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarLeftOverlay rendering should not render a sidebar when sideBarVisibility is false 1`] = `
<div>
  <Sidebar
    animation="overlay"
    as={[Function]}
    direction="left"
    icon="labeled"
    inverted={true}
    vertical={true}
    visible={false}
    width="thin"
  >
    <Link
      href="/"
      replace={false}
      to="/"
    >
      <MenuItem
        as="div"
        name="home"
        onClick={[Function]}
      >
        Home
      </MenuItem>
    </Link>
    <Link
      href="/library"
      replace={false}
      to="/library"
    >
      <MenuItem
        as="div"
        name="library"
        onClick={[Function]}
      >
        Library
      </MenuItem>
    </Link>
    <Link
      href="/journals"
      replace={false}
      to="/journals"
    >
      <MenuItem
        as="div"
        name="journals"
        onClick={[Function]}
      >
        Journals
      </MenuItem>
    </Link>
    <Link
      href="/signin"
      replace={false}
      to="/signin"
    >
      <MenuItem
        as="div"
        name="signin"
        onClick={[Function]}
      >
        Sign In
      </MenuItem>
    </Link>
  </Sidebar>
</div>
`;

exports[`SidebarLeftOverlay rendering should render a sidebar when sideBarVisibility is true 1`] = `
<div>
  <Sidebar
    animation="overlay"
    as={[Function]}
    direction="left"
    icon="labeled"
    inverted={true}
    vertical={true}
    visible={true}
    width="thin"
  >
    <Link
      href="/"
      replace={false}
      to="/"
    >
      <MenuItem
        as="div"
        name="home"
        onClick={[Function]}
      >
        Home
      </MenuItem>
    </Link>
    <Link
      href="/library"
      replace={false}
      to="/library"
    >
      <MenuItem
        as="div"
        name="library"
        onClick={[Function]}
      >
        Library
      </MenuItem>
    </Link>
    <Link
      href="/journals"
      replace={false}
      to="/journals"
    >
      <MenuItem
        as="div"
        name="journals"
        onClick={[Function]}
      >
        Journals
      </MenuItem>
    </Link>
    <Link
      href="/signin"
      replace={false}
      to="/signin"
    >
      <MenuItem
        as="div"
        name="signin"
        onClick={[Function]}
      >
        Sign In
      </MenuItem>
    </Link>
  </Sidebar>
</div>
`;

exports[`SidebarLeftOverlay rendering should render a sign in menu item when not authenticated 1`] = `
<div>
  <Sidebar
    animation="overlay"
    as={[Function]}
    direction="left"
    icon="labeled"
    inverted={true}
    vertical={true}
    visible={true}
    width="thin"
  >
    <Link
      href="/"
      replace={false}
      to="/"
    >
      <MenuItem
        as="div"
        name="home"
        onClick={[Function]}
      >
        Home
      </MenuItem>
    </Link>
    <Link
      href="/library"
      replace={false}
      to="/library"
    >
      <MenuItem
        as="div"
        name="library"
        onClick={[Function]}
      >
        Library
      </MenuItem>
    </Link>
    <Link
      href="/journals"
      replace={false}
      to="/journals"
    >
      <MenuItem
        as="div"
        name="journals"
        onClick={[Function]}
      >
        Journals
      </MenuItem>
    </Link>
    <Link
      href="/signin"
      replace={false}
      to="/signin"
    >
      <MenuItem
        as="div"
        name="signin"
        onClick={[Function]}
      >
        Sign In
      </MenuItem>
    </Link>
  </Sidebar>
</div>
`;

exports[`SidebarLeftOverlay rendering should render a sign out menu item when authenticated non-anonymously 1`] = `
<div>
  <Sidebar
    animation="overlay"
    as={[Function]}
    direction="left"
    icon="labeled"
    inverted={true}
    vertical={true}
    visible={true}
    width="thin"
  >
    <Link
      href="/"
      replace={false}
      to="/"
    >
      <MenuItem
        as="div"
        name="home"
        onClick={[Function]}
      >
        Home
      </MenuItem>
    </Link>
    <Link
      href="/library"
      replace={false}
      to="/library"
    >
      <MenuItem
        as="div"
        name="library"
        onClick={[Function]}
      >
        Library
      </MenuItem>
    </Link>
    <Link
      href="/journals"
      replace={false}
      to="/journals"
    >
      <MenuItem
        as="div"
        name="journals"
        onClick={[Function]}
      >
        Journals
      </MenuItem>
    </Link>
    <MenuItem
      as="div"
      name="logout"
      onClick={[Function]}
    >
      Sign Out
    </MenuItem>
  </Sidebar>
</div>
`;
